fix page too large

--- a/frontend/src/app/pages/employe/employe.component.scss
+++ b/frontend/src/app/pages/employe/employe.component.scss
@@ -4,4 +4,12 @@
     display: block;
     min-height: $page-height;
     width: 100vw;
+    max-width: 100%;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
 }
